tests/008_id_int.pan.out
tests/008_id_int.pan:21:1-3: error: unable to verify type of f6
tests/008_id_int.pan:44:1-4: error: unable to verify type of f14
tests/008_id_int.pan:53:1-4: error: unable to verify type of f17
f0 : ℤ
f1 : ℤ
f2 : {n:ℤ | n = 0}
f3 : {n:ℤ | n = 1}
f4 : {n:ℤ | n = 0}
f5 : {n:ℤ | n = 1}
f7 : {x:ℤ | true} → {j:ℤ | j = x}
f8 : ℤ → ℤ
f9 : {a:ℤ | true} → ℤ
f10 : ℤ → {b:ℤ | true}
f11 : {a:ℤ | true} → {b:ℤ | b = a}
f12 : {a:ℤ | a = 1} → ℤ
f13 : {a:ℤ | a = 1} → {b:ℤ | b = 1}
f15 : {a:ℤ | a = 1} → {b:ℤ | b = 1}
f16 : {a:ℤ | a = 1} → {b:ℤ | b = 1}
f18 : {a:ℤ | a > 5} → {b:ℤ | b > 1}
f19 : {a:ℤ | a > 5} → {b:ℤ | b > 5}
f20 : {a:ℤ | a > 1} → {b:ℤ | b > 1}